[package]
name        = "logfast"
version     = "0.1.0"
description = "Insanely fast logging with a simple interface"
authors = ["alfie@alfie.wtf"]

documentation = "http://docs.rs/logfast/"
homepage      = "https://crates.io/crates/logfast"
repository    = "https://gitlab.com/alfiedotwtf/logfast"
readme        = "README.md"
license       = "GPL-2.0-only"
edition       = "2018"

[dependencies]
chrono = "0.4.10"
die    = "0.2.0"
