[package]
name        = "logfast"
version     = "1.1.5"
description = "Insanely fast logging with a simple interface"
authors     = ["alfie@alfie.wtf"]

documentation = "http://docs.rs/logfast/"
homepage      = "https://crates.io/crates/logfast"
repository    = "https://github.com/alfiedotwtf/logfast"
readme        = "README.md"
license       = "GPL-2.0-only"
edition       = "2018"

[dependencies]
chrono = "=0.4.19"
die    = "=0.2.0"
